# optional_ref

./: .gitignore  CMakeLists.txt
cmake/: create-package.cmake
include/: optional_ref.hpp
source/: CMakeLists.txt
source/docs/: CMakeLists.txt
source/docs/doxygen/: CMakeLists.txt  Doxyfile.in
source/docs/doxygen/html/: stylesheet.css
source/include/: optional_ref.hpp
source/include/gch/: optional_ref.hpp
source/support/python/gch/gdb/prettyprinters/optional_ref/: __init__.py  prettyprinter.py
source/test/: CMakeLists.txt  main.cpp  test-arrow.cpp  test-as_const.cpp  test-as_mutable.cpp  test-assign.cpp  test-bind.cpp  test-comparison-constexpr-disparate.cpp  test-comparison-constexpr.cpp  test-comparison.cpp  test-const.cpp  test-contains.cpp  test-deduction.cpp  test-hash.cpp  test-incomplete.cpp  test-inheritence.cpp  test-instantiation.cpp  test-make_optional_ref.cpp  test-movement.cpp  test-nullopt.cpp  test-pointer-cast.cpp  test-swap-constexpr.cpp  test-throw.cpp  test_common.hpp
test/: CMakeLists.txt  main.cpp
